--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>    
+
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
@@ -65,7 +68,7 @@
     <!-- ===================== MAIN ===================== -->
     <main>
         <!-- Sección hero -->
-        <section class="hero">
+        <section class="hero animate__animated animate__fadeIn">
             <h1 class="titulo">Bolsos y complementos únicos, hechos a mano</h1>
             <p>Creamos bolsos y complementos de crochet hechos a mano, sin producción en cadena y con materiales cruelty-free.</p>
         </section>
