--- a/pages/faq.html
+++ b/pages/faq.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -26,8 +29,8 @@
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -70,39 +73,43 @@
         <!-- Contenedor de preguntas -->
         <section class="faq-container">
             <!-- Pregunta 1 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Se pueden hacer pedidos personalizados?</h3>
                 <p>Sí, solo debes ponerte en contacto con nosotros para que te expliquemos el proceso.</p>
             </article>
 
             <!-- Pregunta 2 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Cuánto tardará en llegar mi pedido?</h3>
-                <p>El tiempo de entrega depende de tu ubicación y de si el producto está en stock. Normalmente los envíos nacionales tardan entre 3 y 5 días hábiles. Si tu pedido es personalizado, el tiempo de entrega será entre 7 y 10 días hábiles.</p>
+                <p>El tiempo de entrega depende de tu ubicación y de si el producto está en stock. Normalmente los
+                    envíos nacionales tardan entre 3 y 5 días hábiles. Si tu pedido es personalizado, el tiempo de
+                    entrega será entre 7 y 10 días hábiles.</p>
             </article>
 
             <!-- Pregunta 3 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Puedo devolver o cambiar un producto?</h3>
                 <p>Solamente aceptamos cambios, siempre y cuando el producto esté en perfectas condiciones.</p>
             </article>
 
             <!-- Pregunta 4 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Qué métodos de pago aceptan?</h3>
                 <p>Aceptamos transferencias bancarias o Bizum.</p>
             </article>
 
             <!-- Pregunta 5 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Tienen tienda física?</h3>
                 <p>No, por ahora solo vendemos online. Pero ofrecemos envíos a todo el país.</p>
             </article>
 
             <!-- Pregunta 6 -->
-            <article class="faq-item">
+            <article class="faq-item animate__animated animate__fadeInUp">
                 <h3>¿Cómo puedo contactar con vosotros?</h3>
-                <p>Puedes escribirnos a <a href="mailto:#">lule@bylule.com</a>, enviarnos un DM por nuestro perfil de Instagram o enviarnos un mensaje a través de nuestra página de <a href="../pages/contacto.html">Contacto</a>.</p>
+                <p>Puedes escribirnos a <a href="mailto:#">lule@bylule.com</a>, enviarnos un DM por nuestro perfil de
+                    Instagram o enviarnos un mensaje a través de nuestra página de <a
+                        href="../pages/contacto.html">Contacto</a>.</p>
             </article>
         </section>
     </main>
