--- a/pages/sobrenosotros.html
+++ b/pages/sobrenosotros.html
@@ -10,6 +10,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="../assets/css/style.css">
 </head>
@@ -26,8 +29,8 @@
                 </a>
 
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
 
@@ -69,7 +72,9 @@
             <img src="../assets/img/sobrenosotros.jpg" alt="Historia de LULE">
             <div class="text">
                 <h2>Nuestra Historia</h2>
-                <p>LULE nació en el corazón del Empordà con el propósito de crear bolsos y complementos únicos, hechos a mano con materiales sostenibles y cruelty-free. Cada pieza refleja el amor por la artesanía y el diseño consciente.</p>
+                <p>LULE nació en el corazón del Empordà con el propósito de crear bolsos y complementos únicos, hechos a
+                    mano con materiales sostenibles y cruelty-free. Cada pieza refleja el amor por la artesanía y el
+                    diseño consciente.</p>
             </div>
         </section>
 
@@ -77,7 +82,8 @@
         <section class="section reverse">
             <div class="text">
                 <h2>Materiales y Proceso</h2>
-                <p>Trabajamos con hilos y fibras ecológicas, sin componentes de origen animal. Cada bolso es tejido a mano, sin producción en cadena, asegurando calidad y exclusividad en cada detalle.</p>
+                <p>Trabajamos con hilos y fibras ecológicas, sin componentes de origen animal. Cada bolso es tejido a
+                    mano, sin producción en cadena, asegurando calidad y exclusividad en cada detalle.</p>
             </div>
             <img src="../assets/img/material.jpg" alt="Proceso de creación de LULE">
         </section>
