modificaciones animaciones css y creacion parcial productos

--- a/pages/bolsos.html
+++ b/pages/bolsos.html
@@ -11,7 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
     <!-- Animate.css -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Estilos personalizados -->
     <link rel="stylesheet" href="../assets/css/style.css">
@@ -74,7 +74,9 @@
         <section class="bolsos-container">
             <!-- Card 1 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-amarillo.jpg" alt="Bolso Amarillo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-amarillo.jpg" alt="Bolso Amarillo crochet">
+                </div>
                 <h3>Bolso Amarillo</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€28.00</span>
@@ -82,7 +84,9 @@
 
             <!-- Card 2 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-azul.jpg" alt="Bolso Azul crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-azul.jpg" alt="Bolso Azul crochet">
+                </div>
                 <h3>Bolso Azul</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€28.00</span>
@@ -90,7 +94,9 @@
 
             <!-- Card 3 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-marron.jpg" alt="Bolso Marrón crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-marron.jpg" alt="Bolso Marrón crochet">
+                </div>
                 <h3>Bolso Marrón</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€32.00</span>
@@ -98,7 +104,9 @@
 
             <!-- Card 4 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-rojo.jpg" alt="Bolso Rojo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-rojo.jpg" alt="Bolso Rojo crochet">
+                </div>
                 <h3>Bolso Rojo</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€24.00</span>
@@ -106,7 +114,9 @@
 
             <!-- Card 5 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-rosaverde.jpg" alt="Bolso Rosa y verde crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-rosaverde.jpg" alt="Bolso Rosa y verde crochet">
+                </div>
                 <h3>Bolso Rosa y Verde</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€26.00</span>
@@ -114,7 +124,9 @@
 
             <!-- Card 6 -->
             <article class="bolso">
-                <img src="../assets/img/bolsorosa.jpg" alt="Bolso Rosa crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolsorosa.jpg" alt="Bolso Rosa crochet">
+                </div>
                 <h3>Bolso Rosa</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€26.00</span>
