--- a/pages/complementos.html
+++ b/pages/complementos.html
@@ -74,7 +74,9 @@
         <section class="bolsos-container">
             <!-- Card 1 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-marron.jpg" alt="Balaclava marrón crochet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-marron.jpg" alt="Balaclava marrón crochet">
+                </div>
                 <h3>Balaclava Marrón</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -82,7 +84,9 @@
 
             <!-- Card 2 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-verde.jpg" alt="Balaclava verde crochet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-verde.jpg" alt="Balaclava verde crochet">
+                </div>
                 <h3>Balaclava Verde</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -90,7 +94,9 @@
 
             <!-- Card 3 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-roja.jpg" alt="Balaclava roja crochet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-roja.jpg" alt="Balaclava roja crochet">
+                </div>
                 <h3>Balaclava Roja</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -98,7 +104,9 @@
 
             <!-- Card 4 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-azul.jpg" alt="Coletero azul crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-azul.jpg" alt="Coletero azul crochet">
+                </div>
                 <h3>Coletero Azul</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
@@ -106,7 +114,9 @@
 
             <!-- Card 5 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-rojo.jpg" alt="Coletero rojo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-rojo.jpg" alt="Coletero rojo crochet">
+                </div>
                 <h3>Coletero Rojo</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
@@ -114,7 +124,9 @@
 
             <!-- Card 6 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-naranja.jpg" alt="Coletero naranja crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-naranja.jpg" alt="Coletero naranja crochet">
+                </div>
                 <h3>Coletero Naranja</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
