--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -77,7 +77,9 @@
         <section class="bolsos-container">
             <!-- Card 1 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-amarillo.jpg" alt="Bolso Amarillo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-amarillo.jpg" alt="Bolso Amarillo crochet">
+                </div>
                 <h3>Bolso Amarillo</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€28.00</span>
@@ -85,7 +87,9 @@
 
             <!-- Card 2 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-azul.jpg" alt="Bolso Azul corchet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-azul.jpg" alt="Bolso Azul corchet">
+                </div>
                 <h3>Bolso Azul</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€28.00</span>
@@ -93,7 +97,9 @@
 
             <!-- Card 3 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-marron.jpg" alt="Bolso Marron crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-marron.jpg" alt="Bolso Marron crochet">
+                </div>
                 <h3>Bolso Marron</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€32.00</span>
@@ -101,7 +107,9 @@
 
             <!-- Card 4 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-rojo.jpg" alt="Bolso Rojo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-rojo.jpg" alt="Bolso Rojo crochet">
+                </div>
                 <h3>Bolso Rojo</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€24.00</span>
@@ -109,7 +117,9 @@
 
             <!-- Card 5 -->
             <article class="bolso">
-                <img src="../assets/img/bolso-rosaverde.jpg" alt="Bolso Rosa y verde crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolso-rosaverde.jpg" alt="Bolso Rosa y verde crochet">
+                </div>
                 <h3>Bolso Rosa y Verde</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€26.00</span>
@@ -117,7 +127,9 @@
 
             <!-- Card 6 -->
             <article class="bolso">
-                <img src="../assets/img/bolsorosa.jpg" alt="Bolso Rosa crochet">
+                <div class="img-container">
+                    <img src="../assets/img/bolsorosa.jpg" alt="Bolso Rosa crochet">
+                </div>
                 <h3>Bolso Rosa</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
                 <span class="precio">€26.00</span>
@@ -125,7 +137,9 @@
 
             <!-- Card 7 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-marron.jpg" alt="balaclava marron corchet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-marron.jpg" alt="balaclava marron corchet">
+                </div>
                 <h3>Balaclava Marrón</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -133,7 +147,9 @@
 
             <!-- Card 8 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-verde.jpg" alt="Balaclava verde crochet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-verde.jpg" alt="Balaclava verde crochet">
+                </div>
                 <h3>Balaclava Verde</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -141,7 +157,9 @@
 
             <!-- Card 9 -->
             <article class="bolso">
-                <img src="../assets/img/balaclava-roja.jpg" alt="Balaclava roja crochet">
+                <div class="img-container">
+                    <img src="../assets/img/balaclava-roja.jpg" alt="Balaclava roja crochet">
+                </div>
                 <h3>Balaclava Roja</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
@@ -149,7 +167,9 @@
 
             <!-- Card 10 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-azul.jpg" alt="Coletero azul crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-azul.jpg" alt="Coletero azul crochet">
+                </div>
                 <h3>Coletero Azul</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
@@ -157,7 +177,9 @@
 
             <!-- Card 11 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-rojo.jpg" alt="Coletero rojo crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-rojo.jpg" alt="Coletero rojo crochet">
+                </div>
                 <h3>Coletero Rojo</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
@@ -165,7 +187,9 @@
 
             <!-- Card 12 -->
             <article class="bolso">
-                <img src="../assets/img/coletero-naranja.jpg" alt="Coletero naranja crochet">
+                <div class="img-container">
+                    <img src="../assets/img/coletero-naranja.jpg" alt="Coletero naranja crochet">
+                </div>
                 <h3>Coletero Naranja</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€12.00</span>
