agregado badge de bootstrap en productos

--- a/pages/bolsos.html
+++ b/pages/bolsos.html
@@ -89,7 +89,7 @@
                 </div>
                 <h3>Bolso Azul</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
-                <span class="precio">€28.00</span>
+                <span class="precio">€28.00 <span class="badge bg-success">Oferta</span></span>
             </article>
 
             <!-- Card 3 -->
@@ -119,7 +119,7 @@
                 </div>
                 <h3>Bolso Rosa y Verde</h3>
                 <p>Bolso hecho a mano con materiales sostenibles. Perfecto para cualquier ocasión.</p>
-                <span class="precio">€26.00</span>
+                <span class="precio">€28.00 <span class="badge bg-success">Oferta</span></span>
             </article>
 
             <!-- Card 6 -->
