--- a/pages/complementos.html
+++ b/pages/complementos.html
@@ -87,7 +87,7 @@
                 <div class="img-container">
                     <img src="../assets/img/balaclava-verde.jpg" alt="Balaclava verde crochet">
                 </div>
-                <h3>Balaclava Verde</h3>
+                <h3>Bolso Amarillo</h3>
                 <p>Ideal para el día a día, con un diseño moderno y cómodo.</p>
                 <span class="precio">€36.00</span>
             </article>
