--- a/pages/coleccion.html
+++ b/pages/coleccion.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bolsos</title>
+    <title>LULE · Toda la Colección</title>
+    <meta name="description" content="Conocé todos nuestros productos. Colección completa de LULE: bolsos, complementos y más.">
+    <meta name="keywords" content="LULE, colección completa, bolsos, complementos, productos">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Estilos personalizados -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
