--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preguntas Frecuentes - By LULE</title>
+    <title>LULE · Preguntas Frecuentes</title>
+    <meta name="description" content="Resolvemos tus dudas sobre pedidos, pagos, envíos y más.">
+    <meta name="keywords" content="LULE, preguntas frecuentes, envíos, pedidos, contacto">
+
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -14,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
     <!-- Estilos personalizados -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body>
